--- a/orden.css
+++ b/orden.css
@@ -35,15 +35,24 @@ width: 300px;
 margin-left: auto;
 margin-right: auto;
 text-align: center;
-
+border-radius: 20px;
+overflow: hidden;
 }
 .arriba{
 top: auto;
 background-color: black;
-height: 25px;
+height: 90px;
 width: 300px;
 }
 .imagenredonda{
 border-radius: 50%;
+top: -59px;
+position: relative;
+}
+h1{
+    position: absolute;
+    top: 35%;
+    left: 365px;
+    text-align: center;
 
 }
